--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
       <div class="main__container">
         <section class="about" id="about">
           <h2 class="about__title">
-            Miami best<br>Real estate <a class="about__title-blue" href="#">here</a>
+            Miami best<br>Real estate <a class="about__title-blue" href="https://www.google.com/maps/place/Minneapolis,+MN+55401,+USA/@44.9843448,-93.2739398,15z/data=!3m1!4b1!4m8!1m2!2m1!1s400+first+ave.+n.+suite+700+Minneapolis,+MN+55401!3m4!1s0x52b33281c36debc3:0x8fc986d567a1ce5f!8m2!3d44.9836543!4d-93.2693572">here</a>
           </h2>
           <div class="about__content-wraper">
             <p class="about__content-title">Over 50 years experience in love.</p>
@@ -80,8 +80,7 @@
               <br>
               The market leader in real estate since 2003. Awards Real Estate
               Company, 2010, 2011, 2013. More than 200 satisfied customers premium
-              segment. We focus only on new buildings and high-level doskanalno
-              know this area better than other specialists.
+              segment. We focus only on new buildings and high-level new buildings and thoroughly know this area better than other specialists.
               <br>Working directly
               with developers - so have more useful information about the
               profitable deals.
