Adress fix and shadow in testimonials

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                 <a class="nav__link" href="#gallery">Gallery</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#contacts">Consyltation</a>
+                <a class="nav__link" href="#contacts">Consultation</a>
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="#testimonials">Testimonials</a>
@@ -202,7 +202,11 @@
               </div>
               <div class="contacts__details-right">
                 <p class="contacts__details-title">Adress</p>
-                <a class="contacts__details-content" href="https://www.google.com/maps/place/Minneapolis,+MN+55401,+USA/@44.9843448,-93.2739398,15z/data=!3m1!4b1!4m8!1m2!2m1!1s400+first+ave.+n.+suite+700+Minneapolis,+MN+55401!3m4!1s0x52b33281c36debc3:0x8fc986d567a1ce5f!8m2!3d44.9836543!4d-93.2693572">
+                <a
+                  class="contacts__details-content"
+                  href="https://www.google.com/maps/place/Minneapolis,+MN+55401,+USA/@44.9843448,-93.2739398,15z/data=!3m1!4b1!4m8!1m2!2m1!1s400+first+ave.+n.+suite+700+Minneapolis,+MN+55401!3m4!1s0x52b33281c36debc3:0x8fc986d567a1ce5f!8m2!3d44.9836543!4d-93.2693572"
+                  target="_blanck"
+                >
                   400 first ave. n.<br>
                   suite 700<br>
                   Minneapolis, MN<br>
